--- a/src/assets/css/stylesindex.css
+++ b/src/assets/css/stylesindex.css
@@ -27,12 +27,12 @@
     background: rgba(0, 0, 0, 0.6) !important;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    border-bottom: 1px solid rgba(255,255,255,0.1);
+    border-bottom: 1px solid rgba(54, 51, 51, 0.179);
 }
 
 /* Logo */
 .logo-navbar {
-    height: 45px;
+    height: 65px;
 }
 
 /* Links del menú */
